# myprojects

mini_os/: Cargo.toml  notes  readme.md
mini_os/src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
mini_os/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
mini_os/src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
mini_os/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
object_detection/: Cargo.toml  notes
object_detection/src/: main.rs
os_concepts/: Cargo.toml
os_concepts/dining_philosophy/: Cargo.toml
os_concepts/dining_philosophy/src/: lib.rs  main.rs
rust_cnn/: Cargo.toml  notes
rust_cnn/src/: activation.rs  lib.rs
schedulars/: Cargo.toml
schedulars/cfs_linux/: Cargo.toml
schedulars/multilevel_priority_queue/: Cargo.toml
schedulars/round_robin/: Cargo.toml  concept
schedulars/round_robin/src/: lib.rs  main.rs  process.rs  process_state.rs  schedular.rs
